force-app/main/default/objects/LightningTutorial__c/LightningTutorial__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Modals</label>
</CustomObject>