force-app/main/default/objects/LightningTutorial__c/fields/ActivityReminders__c.field-meta.xml
<CustomField>
    <fullName>ActivityReminders__c</fullName>
    <defaultValue>today()-1</defaultValue>
    <description>last date that activity reminder has been showed</description>
    <label>ActivityReminders</label>
    <type>Date</type>
</CustomField>