force-app/main/default/objects/LightningTutorial__c/fields/Later__c.field-meta.xml
<CustomField>
    <fullName>Later__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Later</label>
    <type>Checkbox</type>
</CustomField>