force-app/main/default/objects/LightningTutorial__c/fields/Never__c.field-meta.xml
<CustomField>
    <fullName>Never__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Never</label>
    <type>Checkbox</type>
</CustomField>